--- a/arch/arm64/configs/lineage_zippo_defconfig
+++ b/arch/arm64/configs/lineage_zippo_defconfig
@@ -68,11 +68,12 @@ CONFIG_LITTLE_CPU_MASK=15
 CONFIG_BIG_CPU_MASK=112
 CONFIG_PRIME_CPU_MASK=128
 CONFIG_PREEMPT=y
-CONFIG_HZ_100=y
+# CONFIG_HZ_100 is not set
 # CONFIG_HZ_250 is not set
 # CONFIG_HZ_300 is not set
-# CONFIG_HZ_500 is not set
+CONFIG_HZ_500=y
 # CONFIG_HZ_1000 is not set
+CONFIG_HZ=500
 CONFIG_CLEANCACHE=y
 CONFIG_CMA=y
 CONFIG_ZSMALLOC=y
