--- a/arch/arm64/configs/lineage_zippo_defconfig
+++ b/arch/arm64/configs/lineage_zippo_defconfig
@@ -70,10 +70,10 @@ CONFIG_PRIME_CPU_MASK=128
 CONFIG_PREEMPT=y
 # CONFIG_HZ_100 is not set
 # CONFIG_HZ_250 is not set
-# CONFIG_HZ_300 is not set
-CONFIG_HZ_500=y
+CONFIG_HZ_300=y
+CONFIG_HZ=300
+# CONFIG_HZ 500 is not set
 # CONFIG_HZ_1000 is not set
-CONFIG_HZ=500
 CONFIG_CLEANCACHE=y
 CONFIG_CMA=y
 CONFIG_ZSMALLOC=y
