--- a/arch/arm64/configs/lineage_zippo_defconfig
+++ b/arch/arm64/configs/lineage_zippo_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-Astrazeneca-Project"
+CONFIG_LOCALVERSION="-BiONTECH-2.0"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
