defconfig: ARM64/configs: Enable dynamic schedtune boost

--- a/arch/arm64/configs/lineage_zippo_defconfig
+++ b/arch/arm64/configs/lineage_zippo_defconfig
@@ -744,6 +744,7 @@ CONFIG_WCD_DSP_GLINK=y
 CONFIG_SND_SOC_TFA9874=y
 CONFIG_RMNET_PERF=y
 CONFIG_RMNET_SHS=y
+CONFIG_DYNAMIC_STUNE_BOOST=y
 
 #
 # Boeffla Wakelocks
