arch/arm64: configs: Enable Coresight placeholder driver

--- a/arch/arm64/configs/lineage_zippo_defconfig
+++ b/arch/arm64/configs/lineage_zippo_defconfig
@@ -749,6 +749,8 @@ CONFIG_SND_SOC_TFA9874=y
 CONFIG_RMNET_PERF=y
 CONFIG_RMNET_SHS=y
 CONFIG_DYNAMIC_STUNE_BOOST=y
+CONFIG_CORESIGHT_PLACEHOLDER=y
+CONFIG_CORESIGHT_AMBA_PLACEHOLDER=y
 
 #
 # Boeffla Wakelocks
