arch/arm64: configs: Enable CONFIG_FINGERPRINT_BOOST

--- a/arch/arm64/configs/lineage_zippo_defconfig
+++ b/arch/arm64/configs/lineage_zippo_defconfig
@@ -751,6 +751,7 @@ CONFIG_RMNET_SHS=y
 CONFIG_DYNAMIC_STUNE_BOOST=y
 CONFIG_CORESIGHT_PLACEHOLDER=y
 CONFIG_CORESIGHT_AMBA_PLACEHOLDER=y
+CONFIG_FINGERPRINT_BOOST=y
 
 #
 # Boeffla Wakelocks
