--- a/arch/arm64/configs/lineage_zippo_defconfig
+++ b/arch/arm64/configs/lineage_zippo_defconfig
@@ -43,7 +43,7 @@ CONFIG_EMBEDDED=y
 CONFIG_PERF_EVENTS=y
 # CONFIG_SLUB_DEBUG is not set
 # CONFIG_COMPAT_BRK is not set
-CONFIG_PROFILING=y
+# CONFIG_PROFILING is not set
 CONFIG_WIREGUARD=y
 # CONFIG_WIREGUARD_DEBUG is not set
 CONFIG_CC_STACKPROTECTOR_STRONG=y
